# OmniBot

./: teste_motores.ino
Motor Driver/Arduino/cascade_control/: cascade_control.ino
Motor Driver/Arduino/velocity_estimation/: velocity_estimation.ino
Motor Driver/Pico/pwm_example/: .gitignore  CMakeLists.txt  multencoder.c  pwm_example.c
Simulation/Controller Design/: estim_malha_mec.slx  estim_malha_mec.slxc  estim_malha_mec_spesession.mat  medicao_velocidade.m  parametros_cascata.slxc  parametros_modelo.m
Simulation/Controller Design/experiments_m1/: 12v_medicao_i_noload.txt  corrente_x_velocidade.txt  degrau_tensao_12V.txt  determinar_tau_m11.txt
Simulation/Controller Design/experiments_m3/: determinar_tau_m3.txt  rotor_livre_degraus_7v_2.txt  rotor_livre_degraus_7v_3.txt
Simulation/Kinematics/: kinematics.ipynb
cascade_control/: cascade_control.ino
debug/controle_corrente/: 12v_i_load_nom.txt  12v_medicao_i_noload.txt  dc_motor.slx  degrau_tensao_roda.txt  degrau_tensão_12V.txt  determinar_tau_m.m  estim_malha_eletrica.slx  estim_malha_eletrica.slxc  estim_malha_eletrica_spesession.mat  identificacao_modelos_motor.sid  medicao_corrente.m  medicao_velocidade.m  modelagem_cc_malha_aberta.slx  modelagem_cc_malha_aberta.slxc  motor_cc.slx  motor_cc.slxc  parametros_cascata.slx  parametros_cascata.slxc  parametros_modelo.asv  parametros_modelo.m  parametros_modelo.slx  parametros_modelo.slxc  parametros_modelo_spesession.mat  rotor_travado_7v.txt  stall_current_10v.txt  teste_tauw.txt
debug/controle_corrente/experiments_m1/: degrau_tensao_7V.txt  determinar_tau_m1.txt
debug/controle_corrente/experiments_m2/: determinar_tau_m.txt
debug/controle_velocidade/: controle_velocidade.ino
debug/teste_motores/: teste_motores.ino
omnibot_ws/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
omnibot_ws/.devcontainer/: Dockerfile_arm64  Dockerfile_x86  devcontainer.json  ros2_install.sh
omnibot_ws/src/omnibot_controllers/: CMakeLists.txt  package.xml
omnibot_ws/src/omnibot_controllers/config/: controller_config_3w.yaml
omnibot_ws/src/omnibot_controllers/config/controller_config/: controller_config_3w_v2.yaml
omnibot_ws/src/omnibot_controllers/launch/: omni_control.launch.py
omnibot_ws/src/omnibot_controllers/omnibot_controllers/: omni_kinematics.py  point_stabilization_controller.py
omnibot_ws/src/omnibot_firmware/: CMakeLists.txt  omnibot_interface.xml  package.xml
omnibot_ws/src/omnibot_firmware/firmware-pico/: CMakeLists.txt  firmware-pico.c
omnibot_ws/src/omnibot_firmware/include/omnibot_firmware/: omnibot_interface.hpp
omnibot_ws/src/omnibot_firmware/launch/: hardware_interface.launch.py
omnibot_ws/src/omnibot_firmware/omnibot_firmware/: serial_receiver_node.py  serial_transmitter_node.py
omnibot_ws/src/omnibot_firmware/src/: omnibot_interface.cpp
omnibot_ws_1/: .gitignore
velocity_estimation/: velocity_estimation.ino
(+65 files in other folders)
